--- a/maven-ci.yml
+++ b/maven-ci.yml
@@ -1,5 +1,6 @@
 name: Java CI with Maven
 
+# Trigger workflow on push or PR to main branch
 on:
   push:
     branches: [ main ]
@@ -8,29 +9,24 @@ on:
 
 jobs:
   build-and-test:
-
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      # Step 1: Checkout the repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
+      # Step 2: Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '17'
 
-      - name: Cache Maven dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven-
+      # Step 3: Build project with Maven
+      - name: Build with Maven
+        run: mvn clean install
 
-      - name: Build project
-        run: mvn clean install --batch-mode
-
+      # Step 4: Run tests
       - name: Run tests
         run: mvn test
